# carousel-mxchip-iot-devkit

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config
src/: main.rs  ui.slint
ui/: card.slint  carousel.slint  carousel_demo.slint
