[package]
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
edition = "2018"
readme = "README.md"
name = "embedded-snake"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

ssd1306 = "0.2.4"
embedded-graphics = "0.4.5"

embedded-hal = "0.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4xx-hal]
version = "0.6"
features = [ "rt", "stm32f412" ]

[dependencies.stm32f4]
features = ["stm32f412", "rt"]
version = "0.8"


# this lets you use `cargo fix`!
[[bin]]
name = "embedded-snake"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
