[package]
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
edition = "2021"
readme = "README.md"
name = "embedded-snake"
version = "0.2.0"

[dependencies]

slint = { version = "0.3.0", default-features = false, features = ["compat-0-3-0", "libm", "unsafe-single-threaded"] }

alloc-cortex-m = { version = "0.4.2" }

cortex-m = "0.7.0"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

ssd1306 = "0.7.1"
embedded-graphics-core = "0.3"

embedded-hal = "0.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4xx-hal]
version = "0.14"
features = [ "rt", "stm32f412" ]

[dependencies.stm32f4]
features = ["stm32f412", "rt"]
version = "0.15"


[build-dependencies]
slint-build = { version = "0.3.0" }

# this lets you use `cargo fix`!
[[bin]]
name = "embedded-snake"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
